update industry roles

--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
               <div class="industry-card-content-ctn">
                 <h2>Education</h2>
                 <ul>
-                  <li>Aute labore ullamco irure labore.</li>
-                  <span>Hello</span> 
-                  <li>Cupidatat amet minim cupidatat ex laborum tempor qui ut magna velit exercitation nostrud reprehenderit ad.</li>
-                  <span>Hello</span> 
-                  <li>Labore consectetur do proident sit consectetur est ut veniam mollit consectetur in.</li>
-                  <span>Hello</span> 
+                  <li>Personalized Learning</li>
+                  <span>AI can personalize lectures and learning tactics to individual students. It supports students of various capacities, examines knowledge gaps, and delivers individualized learning recommendations, enhancing each student's efficiency.</span> 
+                  <li>Smart Learning Content</li>
+                  <span>A digital curriculum powered by AI provides intelligent learning content that is more dynamic, engaging, and simple. Other key advantages of AI-driven digital learning include visualizations and simulations.</span> 
+                  <li>Virtual Assistants</li>
+                  <span>AI-based learning systems will include digital AI tutors and virtual aides such as chatbots. Chatbots can communicate with multiple pupils in real time.</span> 
                 </ul>
               </div>
             </div>
@@ -224,12 +224,12 @@
               <div class="industry-card-content-ctn">
                 <h2>Business</h2>
                 <ul>
-                  <li>Cupidatat id exercitation occaecat officia excepteur.</li>
-                  <span>Hello</span> 
-                  <li>Commodo voluptate commodo do fugiat velit do est ex et adipisicing ut voluptate nisi consequat.</li>
-                  <span>Hello</span> 
-                  <li>Dolore aliqua culpa irure qui reprehenderit laborum.</li>
-                  <span>Hello</span> 
+                  <li>Fraud Detection</li>
+                  <span>AI and machine learning algorithms can examine hundreds of data points in real time and flag suspect or outright fraudulent transactions, effectively preventing many fraudulent claims.</span> 
+                  <li>Provide Financial Advice</li>
+                  <span>Apps driven by Artificial Intelligence Technology provide users with highly specialized and targeted financial advice and guidance.</span> 
+                  <li>Personalization</li>
+                  <span>Businesses may employ artificial intelligence to discover and evaluate their customers' purchase behavior. As a result, merchants may provide customers with a more personalized in-store experience.</span> 
                 </ul>
               </div>
             </div>
@@ -244,12 +244,12 @@
               <div class="industry-card-content-ctn">
                 <h2>Others</h2>
                 <ul>
-                  <li>Deserunt et non laborum irure elit ullamco.</li>
-                  <span>Hello</span> 
-                  <li>Eiusmod occaecat voluptate ad officia laboris eiusmod nisi non quis esse sunt cupidatat.</li>
-                  <span>Hello</span> 
-                  <li>Do do do aliquip esse sit quis adipisicing minim nostrud anim sint ullamco.</li>
-                  <span>Hello</span> 
+                  <li>Recommend Programs to Individual Users</li>
+                  <span>AI is assisting show creators and broadcasters in determining which shows or programs to recommend to particular viewers based on their activity.</span> 
+                  <li>Predicting Routes for </li>
+                  <span>AI can provide the best routes to arrive at a destination as well as which routes should be taken to maximize profits.</span> 
+                  <li>Providing Customer Services</li>
+                  <span>AI can extract pieces of information from customers to make approriate and automated messages or responses.</span> 
                 </ul>
               </div>
             </div>
