--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p>Ex nulla irure enim adipisicing cupidatat enim quis.</p>
+                <p>Reduction in Human Error</p>
               </div>
             </div>
           </div>
@@ -293,7 +293,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p>Dolor nulla dolore laboris do ex adipisicing excepteur.</p>
+                <p>Zero Risks</p>
               </div>
             </div>
           </div>
@@ -304,7 +304,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p>Fugiat voluptate consequat pariatur magna minim aute do dolor consequat ipsum nulla culpa veniam esse.</p>
+                <p>24x7 Availability</p>
               </div>
             </div>
           </div>
@@ -315,7 +315,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p>Sit ea quis laborum eu ut cillum eu culpa exercitation irure cupidatat.</p>
+                <p>Digital Assistance</p>
               </div>
             </div>
           </div>
@@ -326,7 +326,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p>Consectetur cupidatat incididunt consectetur duis consequat fugiat ea sint dolor ut nulla anim fugiat.</p>
+                <p>Perform Repetitive Jobs</p>
               </div>
             </div>
           </div>
@@ -337,7 +337,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p>Quis elit excepteur anim Lorem irure duis id exercitation sit non in pariatur.</p>
+                <p>Unbiased Decisions</p>
               </div>
             </div>
           </div>
@@ -348,7 +348,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p>Ipsum commodo ipsum enim aliqua eu pariatur deserunt exercitation enim dolor cillum.</p>
+                <p>Daily Applications</p>
               </div>
             </div>
           </div>
@@ -359,7 +359,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p>Commodo adipisicing sint cupidatat consequat do veniam.</p>
+                <p>New Inventions</p>
               </div>
             </div>
           </div>
@@ -370,7 +370,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p>Duis duis elit laboris sint non excepteur dolor do ad.</p>
+                <p>AI in Risky Situations</p>
               </div>
             </div>
           </div>
