update advantages update

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="assets/styles/keyframes.css" />
   <link rel="stylesheet" href="assets/styles/media-query.css" />
   <link rel="stylesheet" href="assets/styles/anim-classes.css" />
+  <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
 </head>
 <body>
   <main>
@@ -281,6 +282,8 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <img src="assets/images/advantages/error-svgrepo-com.svg" alt="">
+                  <span>1</span>
                 </div>
                 <p>Reduction in Human Error</p>
               </div>
@@ -292,6 +295,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <span>2</span>
                 </div>
                 <p>Zero Risks</p>
               </div>
@@ -303,6 +307,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <span>3</span>
                 </div>
                 <p>24x7 Availability</p>
               </div>
@@ -314,6 +319,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <span>4</span>
                 </div>
                 <p>Digital Assistance</p>
               </div>
@@ -325,6 +331,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <span>5</span>
                 </div>
                 <p>Perform Repetitive Jobs</p>
               </div>
@@ -336,6 +343,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <span>6</span>
                 </div>
                 <p>Unbiased Decisions</p>
               </div>
@@ -347,6 +355,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <span>7</span>
                 </div>
                 <p>Daily Applications</p>
               </div>
@@ -358,6 +367,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <span>8</span>
                 </div>
                 <p>New Inventions</p>
               </div>
@@ -369,6 +379,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <span>9</span>
                 </div>
                 <p>AI in Risky Situations</p>
               </div>
