update advantages update

--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <img src="assets/images/advantages/digit-zero-svgrepo-com.svg" alt="">
                   <span>2</span>
                 </div>
                 <p>Zero Risks</p>
