--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <img src="assets/images/advantages/24-hours-svgrepo-com.svg" alt="">
                   <span>3</span>
                 </div>
                 <p>24x7 Availability</p>
@@ -320,6 +321,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <img src="assets/images/advantages/pda-svgrepo-com.svg" alt="">
                   <span>4</span>
                 </div>
                 <p>Digital Assistance</p>
@@ -332,6 +334,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <img src="assets/images/advantages/music-player-repeat-svgrepo-com.svg" alt="">
                   <span>5</span>
                 </div>
                 <p>Perform Repetitive Jobs</p>
