--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <img src="assets/images/advantages/62ee2a57cf75a40d6777548e-78847477-neutral-decision.svg" alt="">
                   <span>6</span>
                 </div>
                 <p>Unbiased Decisions</p>
