--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <img src="assets/images/advantages/62ee1493e5c0d1071e2500fb-97252033-calendar-date-schedule.svg" alt="">
                   <span>7</span>
                 </div>
                 <p>Daily Applications</p>
@@ -374,7 +375,7 @@
                   <span></span>
                   <span>8</span>
                 </div>
-                <p>New Inventions</p>
+                <p>Emergence of New Inventions</p>
               </div>
             </div>
           </div>
