--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <img src="assets/images/advantages/invention-idea-svgrepo-com.svg" alt="">
                   <span>8</span>
                 </div>
                 <p>Emergence of New Inventions</p>
