--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       </div>
       <div class="industry-content content">
         <div class="industry-det-wrapper">
+          <span></span>
           <div class="industry-circular fade-1">
             <div class="industry-circular-lines">
               <span class="cl-1"></span>
@@ -266,7 +267,7 @@
       <div class="others-content content">
         <div class="others-title-wrapper">
           <span></span>
-          <div class="others-title">
+          <div class="others-title s2-a">
             <div class="others-title-img-ctn">
               <span></span>
               <span></span>
@@ -278,7 +279,7 @@
         <div class="others-advantages-wrapper">
           <div class="others-advantage-card-wrapper">
             <div class="others-advantage-card-ctn">
-              <div class="others-advantage-card">
+              <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
@@ -291,7 +292,7 @@
           </div>
           <div class="others-advantage-card-wrapper">
             <div class="others-advantage-card-ctn">
-              <div class="others-advantage-card">
+              <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
@@ -304,7 +305,7 @@
           </div>
           <div class="others-advantage-card-wrapper">
             <div class="others-advantage-card-ctn">
-              <div class="others-advantage-card">
+              <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
@@ -317,7 +318,7 @@
           </div>
           <div class="others-advantage-card-wrapper">
             <div class="others-advantage-card-ctn">
-              <div class="others-advantage-card">
+              <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
@@ -330,7 +331,7 @@
           </div>
           <div class="others-advantage-card-wrapper">
             <div class="others-advantage-card-ctn">
-              <div class="others-advantage-card">
+              <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
@@ -343,7 +344,7 @@
           </div>
           <div class="others-advantage-card-wrapper">
             <div class="others-advantage-card-ctn">
-              <div class="others-advantage-card">
+              <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
@@ -356,7 +357,7 @@
           </div>
           <div class="others-advantage-card-wrapper">
             <div class="others-advantage-card-ctn">
-              <div class="others-advantage-card">
+              <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
@@ -369,7 +370,7 @@
           </div>
           <div class="others-advantage-card-wrapper">
             <div class="others-advantage-card-ctn">
-              <div class="others-advantage-card">
+              <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
@@ -382,10 +383,11 @@
           </div>
           <div class="others-advantage-card-wrapper">
             <div class="others-advantage-card-ctn">
-              <div class="others-advantage-card">
+              <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
                   <span></span>
                   <span></span>
+                  <img src="assets/images/advantages/62ee1f53a188bf0b4e128b3e-71644644-caution.svg" alt="">
                   <span>9</span>
                 </div>
                 <p>AI in Risky Situations</p>
@@ -397,7 +399,7 @@
     </section>
 
     <section id="Footer" class="footer">
-      <p>Footer</p>
+      <!-- <p>Footer</p> -->
     </section>
 
   </main>
