--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <ul>
                   <li>Recommend Programs to Individual Users</li>
                   <span>AI is assisting show creators and broadcasters in determining which shows or programs to recommend to particular viewers based on their activity.</span> 
-                  <li>Predicting Routes for </li>
+                  <li>Predicting Best Routes in Transportation</li>
                   <span>AI can provide the best routes to arrive at a destination as well as which routes should be taken to maximize profits.</span> 
                   <li>Providing Customer Services</li>
                   <span>AI can extract pieces of information from customers to make approriate and automated messages or responses.</span> 
