--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
         </div>
         <div class="others-advantages-wrapper">
           <div class="others-advantage-card-wrapper">
+            <span></span>
             <div class="others-advantage-card-ctn">
               <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
@@ -291,6 +292,7 @@
             </div>
           </div>
           <div class="others-advantage-card-wrapper">
+            <span></span>
             <div class="others-advantage-card-ctn">
               <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
@@ -304,6 +306,7 @@
             </div>
           </div>
           <div class="others-advantage-card-wrapper">
+            <span></span>
             <div class="others-advantage-card-ctn">
               <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
@@ -317,6 +320,7 @@
             </div>
           </div>
           <div class="others-advantage-card-wrapper">
+            <span></span>
             <div class="others-advantage-card-ctn">
               <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
@@ -330,6 +334,7 @@
             </div>
           </div>
           <div class="others-advantage-card-wrapper">
+            <span></span>
             <div class="others-advantage-card-ctn">
               <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
@@ -343,6 +348,7 @@
             </div>
           </div>
           <div class="others-advantage-card-wrapper">
+            <span></span>
             <div class="others-advantage-card-ctn">
               <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
@@ -356,6 +362,7 @@
             </div>
           </div>
           <div class="others-advantage-card-wrapper">
+            <span></span>
             <div class="others-advantage-card-ctn">
               <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
@@ -369,6 +376,7 @@
             </div>
           </div>
           <div class="others-advantage-card-wrapper">
+            <span></span>
             <div class="others-advantage-card-ctn">
               <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
@@ -382,6 +390,7 @@
             </div>
           </div>
           <div class="others-advantage-card-wrapper">
+            <span></span>
             <div class="others-advantage-card-ctn">
               <div class="others-advantage-card s2-a">
                 <div class="others-advantage-img-ctn">
