--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
           <div class="intro-card-content">
             <h2 class="intro-card-title-role">AI in a Global Scale</h2>
-            <p>AI will help numerous sectors and industries streamline and improve their processes. AI is not a far-off vision, but rather something that is now being integrated and used in a range of industries. Agriculture, Economics, Education, Healthcare, and Business are examples of such fields. There are countless examples of AI already having an impact on the world and significantly enhancing human capabilities.</p>
+            <p>AI helps numerous sectors and industries streamline and improve their processes. AI is not a far-off vision, but rather something that is now being integrated and used in a range of industries. Agriculture, Economics, Education, Healthcare, and Business are examples of such fields. There are countless examples of AI already having an impact on the world and significantly enhancing human capabilities.</p>
           </div>
         </div>
       </div>
@@ -408,7 +408,7 @@
     </section>
 
     <section id="Footer" class="footer">
-      <!-- <p>Footer</p> -->
+      
     </section>
 
   </main>
