--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="shortcut icon" href="assets/images/ai-logo.png" type="image/x-icon">
   <title>Document</title>
   <link rel="stylesheet" href="assets/styles/style.css" />
-  <link rel="stylesheet" href="assets/styles/bottom-hover.css" />
   <link rel="stylesheet" href="assets/styles/keyframes.css" />
   <link rel="stylesheet" href="assets/styles/media-query.css" />
   <link rel="stylesheet" href="assets/styles/anim-classes.css" />
@@ -408,19 +407,12 @@
     </section>
 
     <section id="Footer" class="footer">
-      
+      <div class="footer-links">
+        <a href="https://github.com/godkingjay/BSCS-GVC-01-Infographics" target="_blank"><img src="assets/images/footer/github-svgrepo-com.svg" alt="github"></a>
+      </div>
     </section>
 
   </main>
-
-  <div class="hover-listen">
-    <div class="source-code">
-      <a href="https://github.com/godkingjay/BSCS-GVC-01-Infographics" target="_blank">
-        <img src="assets/images/github-logo.png" alt="source code">
-      </a>
-    </div>
-  </div>
-
   <script src="app.js"></script>
 </body>
 </html>
