--- a/index.html
+++ b/index.html
@@ -87,36 +87,36 @@
               <span class="cl-1"></span>
             </div>
             <div class="industry-circle-ctn">
-              <div class="industry-circle-wrapper">
+              <a href="#industry-agriculture" class="industry-circle-wrapper">
                 <div class="industry-circle">
                   <h2>Agriculture</h2>
                 </div>
-              </div>
-              <div class="industry-circle-wrapper">
+              </a>
+              <a href="#industry-economics" class="industry-circle-wrapper">
                 <div class="industry-circle">
                   <h2>Economics</h2>
                 </div>
-              </div>
-              <div class="industry-circle-wrapper">
+              </a>
+              <a href="#industry-education" class="industry-circle-wrapper">
                 <div class="industry-circle">
                   <h2>Education</h2>
                 </div>
-              </div>
-              <div class="industry-circle-wrapper">
+              </a>
+              <a href="#industry-health" class="industry-circle-wrapper">
                 <div class="industry-circle">
                   <h2>Health</h2>
                 </div>
-              </div>
-              <div class="industry-circle-wrapper">
+              </a>
+              <a href="#industry-business" class="industry-circle-wrapper">
                 <div class="industry-circle">
                   <h2>Business</h2>
                 </div>
-              </div>
-              <div class="industry-circle-wrapper">
+              </a>
+              <a href="#industry-others" class="industry-circle-wrapper">
                 <div class="industry-circle">
                   <h2>Others</h2>
                 </div>
-              </div>
+              </a>
             </div>
             <div class="industry-title">
               <h2>AI in Different Industries</h2>
@@ -134,7 +134,7 @@
             </ul>
           </div>
         </div>
-        <div class="industry-ctn">
+        <div id="industry-agriculture" class="industry-ctn">
           <div class="industry-card-wrapper">
             <div class="industry-card s2-a">
               <div class="industry-card-img-ctn">
@@ -155,7 +155,7 @@
               </div>
             </div>
           </div>
-          <div class="industry-card-wrapper">
+          <div id="industry-economics" class="industry-card-wrapper">
             <div class="industry-card s2-b">
               <div class="industry-card-img-ctn">
                 <span></span>
@@ -175,7 +175,7 @@
               </div>
             </div>
           </div>
-          <div class="industry-card-wrapper">
+          <div id="industry-education" class="industry-card-wrapper">
             <div class="industry-card s2-a">
               <div class="industry-card-img-ctn">
                 <span></span>
@@ -195,7 +195,7 @@
               </div>
             </div>
           </div>
-          <div class="industry-card-wrapper">
+          <div id="industry-health" class="industry-card-wrapper">
             <div class="industry-card s2-b">
               <div class="industry-card-img-ctn">
                 <span></span>
@@ -215,7 +215,7 @@
               </div>
             </div>
           </div>
-          <div class="industry-card-wrapper">
+          <div id="industry-business" class="industry-card-wrapper">
             <div class="industry-card s2-a">
               <div class="industry-card-img-ctn">
                 <span></span>
@@ -235,7 +235,7 @@
               </div>
             </div>
           </div>
-          <div class="industry-card-wrapper">
+          <div id="industry-others" class="industry-card-wrapper">
             <div class="industry-card s2-b">
               <div class="industry-card-img-ctn">
                 <span></span>
