--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <div class="industry-card-content-ctn">
                 <h2>Agriculture</h2>
                 <ul>
-                  <li>A. Intelligent Spraying of Chemicals</li>
+                  <li>Intelligent Spraying of Chemicals</li>
                   <span>AI technology aids in the detection of plant diseases, pests, and farm nutrition deficiencies. AI sensors can detect and target weeds before determining which herbicide to use in the area.</span>
                   <li>AI-Based Robots for Farm Harvesting</li>
                   <span>AI-based robotic machines can perform bulk harvesting with greater accuracy and speed. These machines aid in increasing productivity and reducing waste from crops left in the field.</span>
@@ -411,6 +411,8 @@
     <section id="Footer" class="footer">
       <div class="footer-links">
         <a href="https://github.com/godkingjay/BSCS-GVC-01-Infographics" target="_blank"><img src="assets/images/footer/github-svgrepo-com.svg" alt="github"></a>
+        <a href="https://www.linkedin.com/in/jarriangojar/" target="_blank"><img src="assets/images/footer/linkedin-svgrepo-com.svg" alt="LinkedIn"></a>
+        <a href="https://twitter.com/godking_jay" target="_blank"><img src="assets/images/footer/twitter-svgrepo-com.svg" alt="Twitter" /></a>
       </div>
     </section>
 
