--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
           <div class="industry-list">
             <h2 class="s2-a">AI in Different Industries</h2>
             <ul class="industry-items">
-              <li class="s2-b"><h2>Agriculture</h2></li>
-              <li class="s2-a"><h2>Economics</h2></li>
-              <li class="s2-b"><h2>Education</h2></li>
-              <li class="s2-a"><h2>Health</h2></li>
-              <li class="s2-b"><h2>Education</h2></li>
-              <li class="s2-a"><h2>Others</h2></li>
+              <li class="s2-b"><a href="#industry-agriculture"><h2>Agriculture</h2></a></li>
+              <li class="s2-a"><a href="#industry-economics"><h2>Economics</h2></a></li>
+              <li class="s2-b"><a href="#industry-education"><h2>Education</h2></a></li>
+              <li class="s2-a"><a href="#industry-health"><h2>Health</h2></a></li>
+              <li class="s2-b"><a href="#industry-business"><h2>Education</h2></a></li>
+              <li class="s2-a"><a href="#industry-others"><h2>Others</h2></a></li>
             </ul>
           </div>
         </div>
