--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
               </a>
             </div>
             <div class="industry-title">
-              <h2>AI in Different Industries</h2>
+              <h2>Use of AI in Different Industries</h2>
             </div>
           </div>
           <div class="industry-list">
-            <h2 class="s2-a">AI in Different Industries</h2>
+            <h2 class="s2-a">Use of AI in Different Industries</h2>
             <ul class="industry-items">
               <li class="s2-b"><a href="#industry-agriculture"><h2>Agriculture</h2></a></li>
               <li class="s2-a"><a href="#industry-economics"><h2>Economics</h2></a></li>
