--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <span></span>
         </div>
         <h1>Artificial Intelligence</h1>
-        <p>Behind The World's Industries</p>
+        <p>Behind Industries and Sectors</p>
         <div class="color-theme">
           <span></span>
           <span></span>
